k8s/micro/deploy-ping.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ping
  labels:
    app: app-ping
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-ping
  template:
    metadata:
      labels:
        app: app-ping
        service: api-ping
    spec:
      hostname: app-ping
      containers:
        - name: app-ping
          image: isaiasmayonh/ping:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-ping
  labels:
    app: app-ping
    service: api-ping
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: api-ping
