k8s/micro/deploy-webapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  labels:
    app: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-api
  template:
    metadata:
      labels:
        app: app-api
        service: api-api
    spec:
      hostname: app-api
      containers:
        - name: app-api
          image: isaiasmayonh/webapi:#{Build.BuildId}#
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-api
  labels:
    app: app-api
    service: api-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: api-api
